--- a/config/api_config.yaml
+++ b/config/api_config.yaml
@@ -13,7 +13,7 @@ gpt-3.5-turbo-0125:
     endpoints: null
     api_type: openai
     parallel: 8
-    
+
 gpt-4-turbo:
     model_name: gpt-4-turbo
     endpoints: null
@@ -31,6 +31,18 @@ gpt-4-1106-preview:
     endpoints: null
     api_type: openai
     parallel: 32
+
+claude-3-5-sonnet-20240620:
+    model_name: claude-3-5-sonnet-20240620
+    endpoints: null
+    api_type: anthropic
+    parallel: 8
+
+claude-3-opus-20240229:
+    model_name: claude-3-opus-20240229
+    endpoints: null
+    api_type: anthropic
+    parallel: 8
 
 Qwen/Qwen1.5-72B-Chat:
     model_name: "Qwen/Qwen1.5-72B-Chat"
