--- a/config/judge_config.yaml
+++ b/config/judge_config.yaml
@@ -23,3 +23,4 @@ prompt_template: ["<|User Prompt|>\n{question_1}\n\n<|The Start of Assistant A's
 # Add your model below for evaluation
 model_list:
   - gpt-4-turbo
+  - gpt-3.5-turbo-0125
